mikec/tests/PASS/control/return/4.mc
int main(){
    int g[];
    g[0] = 15;
    return g[0];
}
