mikec/tests/FAIL/array/11.mc
/*array without length*/
int main(){
    int g[];
    return 0;
}
